--- a/assignments/FinalGroupAssignment_JHR.ipynb
+++ b/assignments/FinalGroupAssignment_JHR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,9 @@
     "import time\n",
     "import geocoder\n",
     "import random\n",
+    "import networkx as nx\n",
+    "from networkx.algorithms import community\n",
+    "from typing import List, Dict, Tuple, Optional\n",
     "from tqdm import tqdm\n",
     "from pathlib import Path\n",
     "from py7zr import unpack_7zarchive"
@@ -20,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5005,14 +5008,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_584\\1407501751.py:1: FutureWarning: In a future version of pandas all arguments of read_xml except for the argument 'path_or_buffer' will be keyword-only.\n",
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_12432\\1407501751.py:1: FutureWarning: In a future version of pandas all arguments of read_xml except for the argument 'path_or_buffer' will be keyword-only.\n",
       "  postdf = pd.read_xml(DATA_DIR / \"politics\" / \"Posts.xml\", \"row\")\n"
      ]
     }
@@ -5023,7 +5026,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Reputation</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>meta_location_x</th>\n",
+       "      <th>loc_id</th>\n",
+       "      <th>meta_location_y</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>on the server farm</td>\n",
+       "      <td>on the server farm</td>\n",
+       "      <td>1532.0</td>\n",
+       "      <td>on the server farm</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>Corvallis, OR</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>912.0</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>100</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>833.0</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>101</td>\n",
+       "      <td>New York, NY, United States</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1335.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36322</th>\n",
+       "      <td>44448</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36323</th>\n",
+       "      <td>44449</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36324</th>\n",
+       "      <td>44450</td>\n",
+       "      <td>131</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36325</th>\n",
+       "      <td>44451</td>\n",
+       "      <td>101</td>\n",
+       "      <td>San Francisco, CA, USA</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1315.0</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36326</th>\n",
+       "      <td>44452</td>\n",
+       "      <td>101</td>\n",
+       "      <td>Kampala, Uganda</td>\n",
+       "      <td>Uganda</td>\n",
+       "      <td>1323.0</td>\n",
+       "      <td>Uganda</td>\n",
+       "      <td>Uganda</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>36327 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Id  Reputation                     Location     meta_location_x  \\\n",
+       "0         -1           1           on the server farm  on the server farm   \n",
+       "1          1         101                Corvallis, OR                  OR   \n",
+       "2          2         100                 New York, NY                  NY   \n",
+       "3          3         101  New York, NY, United States       United States   \n",
+       "4          4           1                          NaN                 NaN   \n",
+       "...      ...         ...                          ...                 ...   \n",
+       "36322  44448           1                          NaN                 NaN   \n",
+       "36323  44449           1                          NaN                 NaN   \n",
+       "36324  44450         131                          NaN                 NaN   \n",
+       "36325  44451         101       San Francisco, CA, USA                 USA   \n",
+       "36326  44452         101              Kampala, Uganda              Uganda   \n",
+       "\n",
+       "       loc_id     meta_location_y        country  \n",
+       "0      1532.0  on the server farm            NaN  \n",
+       "1       912.0                  OR  United States  \n",
+       "2       833.0                  NY  United States  \n",
+       "3      1335.0       United States  United States  \n",
+       "4         NaN                 NaN            NaN  \n",
+       "...       ...                 ...            ...  \n",
+       "36322     NaN                 NaN            NaN  \n",
+       "36323     NaN                 NaN            NaN  \n",
+       "36324     NaN                 NaN            NaN  \n",
+       "36325  1315.0                 USA  United States  \n",
+       "36326  1323.0              Uganda         Uganda  \n",
+       "\n",
+       "[36327 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['united-states', 'united-kingdom', 'election', 'european-union',\n",
+       "       'russian-federation', 'president', 'international-relations', 'law',\n",
+       "       'donald-trump', 'presidential-election', 'brexit', 'economy',\n",
+       "       'congress', 'constitution', 'voting', 'china', 'armed-conflict',\n",
+       "       'democracy', 'parliament', 'parties', 'ukraine', 'international-law',\n",
+       "       'military', 'political-theory', 'senate', 'india', 'government',\n",
+       "       'covid-19', 'history', 'taxes', 'international', 'terminology',\n",
+       "       'supreme-court', 'voting-systems', 'trade', 'public-opinion', 'policy',\n",
+       "       'united-nations', 'israel', 'immigration', 'media', 'impeachment',\n",
+       "       'germany', 'healthcare', 'house-of-representatives', 'sanctions',\n",
+       "       'terrorism', 'ideology', 'iran', 'europe', 'legislative-process',\n",
+       "       'nuclear-weapons', 'nato', 'turkey', 'political-system',\n",
+       "       'republican-party', 'democratic-party', 'electoral-college',\n",
+       "       'demographics', 'geopolitics', 'france', 'budget', 'statistics',\n",
+       "       'judiciary', 'canada', 'religion', 'us-state-laws', 'pakistan',\n",
+       "       'north-korea', 'senate-rules', 'australia', 'police', 'syria',\n",
+       "       'foreign-policy', 'trump-impeachment', 'primaries', 'communism', 'debt',\n",
+       "       'human-rights', 'legislation', 'borders', 'reference-request',\n",
+       "       'protests', 'campaigning', 'comparative-politics', 'education'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import Optional, List\n",
+    "def tags_to_list(tags: Optional[str]) -> List[str]:\n",
+    "    \"turn <tag1><tag2>... into [tag1, tag2, ...]\"\n",
+    "    if not isinstance(tags, str):\n",
+    "        return []\n",
+    "    return tags.replace(\"><\", \",\").replace(\"<\", \"\").replace(\">\", \"\").split(\",\")\n",
+    "\n",
+    "tag_df = postdf.assign(tags = postdf[\"Tags\"].apply(tags_to_list)).explode(\"tags\")[[\"Id\", \"tags\"]].dropna()\n",
+    "\n",
+    "tag_count = tag_df[\"tags\"].value_counts()\n",
+    "tag_count[tag_count > 100].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<[OK] Osm - Geocode [Россия]>"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5036,38 +5294,60 @@
     "edgedf = pd.merge(childposts, topposts, left_on=\"ParentId\", right_on=\"Id\", how=\"left\", suffixes=(\"_child\", \"_top\"))\n",
     "edgedf = edgedf[[\"OwnerUserId_child\", \"OwnerUserId_top\"]].rename(columns={\"OwnerUserId_child\": \"source\", \"OwnerUserId_top\": \"target\"}).astype(\"Int32\")\n",
     "edgedf.dropna(inplace=True)\n",
-    "edgedf = edgedf.astype(\"str\")\n"
+    "edgedf = edgedf.astype(\"str\")\n",
+    "edgedf.to_csv(DATA_DIR / \"politics\" / \"edges.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "from pyvis.network import Network\n",
+    "nodedf = pd.read_csv(DATA_DIR / \"politics\" / \"user_loc_data.csv\")\n",
+    "nodedf[\"Id\"] = nodedf[\"Id\"].astype(\"str\")\n",
+    "nodedf.set_index(\"Id\", inplace=True)\n",
+    "\n",
+    "country_dict = nodedf[\"country\"].to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "G = nx.from_pandas_edgelist(edgedf, \"source\", \"target\", create_using=nx.DiGraph)\n",
-    "G = G.to_undirected()\n",
-    "\n",
-    "# sample the graph to make it smaller\n",
-    "nodes = random.sample(list(G.nodes), 1000)\n",
-    "subG = G.subgraph(nodes)\n",
-    "\n",
-    "# Plot the graph\n",
-    "net = Network(\"500px\", \"500px\")\n",
-    "net.from_nx(subG)\n",
-    "net.save_graph(\"politics.html\")\n"
+    "nx.set_node_attributes(G, country_dict, \"country\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03160158435702129"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.attribute_assortativity_coefficient(G, \"country\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from networkx.algorithms import community\n",
     "\n",
     "# Find biggest connected components\n",
     "largest_cc = max(nx.connected_components(G), key=len)\n",
@@ -5081,12 +5361,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "community_sizes = {i: len(c) for i, c in enumerate(communities)}\n"
+    "# find country of each community\n",
+    "communities = list(communities)\n",
+    "country_communities = []\n",
+    "for community in communities:\n",
+    "    country_communities.append([G.nodes[node][\"country\"] for node in community if not isinstance(G.nodes[node][\"country\"], float)])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "# Find country proportions for each community\n",
+    "country_counts = [Counter(country_community) for country_community in country_communities]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get total counts per country\n",
+    "total_counts = Counter()\n",
+    "for country_count in country_counts:\n",
+    "    total_counts += country_count\n",
+    "\n",
+    "top_countries = {country for country, count in total_counts.most_common(4)}\n",
+    "\n",
+    "# Change country to \"Other\" if not in top 4\n",
+    "for country_count in country_counts:\n",
+    "    for country in list(country_count):\n",
+    "        if country not in top_countries:\n",
+    "            country_count[\"Other\"] += country_count.pop(country)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_df = pd.DataFrame(country_counts).fillna(0)\n",
+    "# calculate proportions\n",
+    "count_df = count_df.div(count_df.sum(axis=1), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Create a co-tag structure --> project that to user-user (weighted network)\n",
+    "    - Spatially adjacent\n",
+    "    - American hegemony (core periphery)\n",
+    "- Also: Are users more likely to interact with users from their own country? (macro-level versus micro-level)\n",
+    "    - Simplest: descriptive \n",
+    "    - Simplest network: reply structure for users\n",
+    "- Temporal networks: SIANA ()\n",
+    "- PMI estimates (bit out of scope)\n",
+    "- ergm\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_16760\\4076606270.py:1: FutureWarning: In a future version of pandas all arguments of read_xml except for the argument 'path_or_buffer' will be keyword-only.\n",
+      "  posts = pd.read_xml(DATA_DIR / \"politics\" / \"Posts.xml\", \"row\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "posts = pd.read_xml(DATA_DIR / \"politics\" / \"Posts.xml\", \"row\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tags_to_list(tags: Optional[str]) -> List[str]:\n",
+    "    \"turn <tag1><tag2>... into [tag1, tag2, ...]\"\n",
+    "    if not isinstance(tags, str):\n",
+    "        return []\n",
+    "    return tags.replace(\"><\", \",\").replace(\"<\", \"\").replace(\">\", \"\").split(\",\")\n",
+    "\n",
+    "tag_user = posts[[\"Tags\", \"OwnerUserId\"]].dropna()\n",
+    "tag_user[\"TagList\"] = tag_user[\"Tags\"].apply(tags_to_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def IoU(set1: set, set2: set) -> float:\n",
+    "    return len(set1.intersection(set2)) / len(set1.union(set2))\n",
+    "\n",
+    "usertag_dict = tag_user.set_index(\"OwnerUserId\")[\"TagList\"].to_dict()\n",
+    "\n",
+    "# iterate over all unordered pairs of keys\n",
+    "combination_dict = {}\n",
+    "for (key1, key2) in itertools.combinations(usertag_dict.keys(), 2):\n",
+    "    # calculate intersection over union\n",
+    "    iou = IoU(set(usertag_dict[key1]), set(usertag_dict[key2]))\n",
+    "    combination_dict[(key1, key2)] = iou\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "userdf = pd.read_csv(DATA_DIR / \"politics\" / \"user_loc_data.csv\")\n",
+    "userdf.set_index(\"Id\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([   -1,     1,     2,     3,     4,     5,     6,     7,     8,\n",
+       "                9,\n",
+       "            ...\n",
+       "            44443, 44444, 44445, 44446, 44447, 44448, 44449, 44450, 44451,\n",
+       "            44452],\n",
+       "           dtype='int64', name='Id', length=36327)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userdf.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "same_country_dict = {}\n",
+    "for (key1, key2) in itertools.combinations(usertag_dict.keys(), 2):\n",
+    "    country1 = userdf.loc[int(key1), \"country\"]\n",
+    "    country2 = userdf.loc[int(key2), \"country\"]\n",
+    "    same_country_dict[(key1, key2)] = country1 == country2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
