--- a/assignments/FinalGroupAssignment_JHR.ipynb
+++ b/assignments/FinalGroupAssignment_JHR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import geocoder\n",
     "import random\n",
     "import networkx as nx\n",
+    "import itertools\n",
     "from networkx.algorithms import community\n",
     "from typing import List, Dict, Tuple, Optional\n",
     "from tqdm import tqdm\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +68,18 @@
     "\n",
     "def download_and_unpack(stack: str) -> None:\n",
     "    download_stackexchange(stack)\n",
-    "    unpack_stackexchange(stack)"
+    "    unpack_stackexchange(stack)\n",
+    "\n",
+    "def IoU(set1: set, set2: set) -> float:\n",
+    "    return len(set1.intersection(set2)) / len(set1.union(set2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5469,13 +5480,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -5513,6 +5517,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_numeric(x: str) -> bool:\n",
+    "    try:\n",
+    "        float(x)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyvis.network import Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_users = tag_usercountry[\"TagList\"].explode().reset_index().rename(columns={\"OwnerUserId\": \"source\", \"TagList\": \"target\"})\n",
+    "\n",
+    "# create a graph from the edge-list\n",
+    "tagG = nx.from_pandas_edgelist(tag_users, \"source\", \"target\", create_using=nx.DiGraph)\n",
+    "\n",
+    "# select highest degree users\n",
+    "user_degrees = {node: degree for node, degree in tagG.degree() if check_numeric(node)}\n",
+    "random_users = random.sample(list(user_degrees), 100)\n",
+    "\n",
+    "\n",
+    "node_colors = {node: (\"blue\" if check_numeric(node) else \"red\") for node in tagG.nodes}\n",
+    "nx.set_node_attributes(tagG, node_colors, \"color\")\n",
+    "\n",
+    "\n",
+    "# filter graph to only include neighbours of top users\n",
+    "subgraphs = [tagG.subgraph(nx.ego_graph(tagG, top_user, radius=1).nodes) for top_user in random_users]\n",
+    "\n",
+    "# merge all subgraphs\n",
+    "full_graph = nx.compose_all(subgraphs)\n",
+    "\n",
+    "# convert all nodes to string\n",
+    "full_graph = nx.relabel_nodes(full_graph, {node: str(node) for node in full_graph.nodes})\n",
+    "\n",
+    "#full_graph.nodes\n",
+    "\n",
+    "\n",
+    "# visualize\n",
+    "nt = Network(height=\"500px\", width=\"500x\", bgcolor=\"#222222\", font_color=\"white\")\n",
+    "nt.from_nx(full_graph)\n",
+    "nt.save_graph(\"tag_graph.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_usercountry.to_pickle(DATA_DIR / \"politics\" / \"tag_usercountry.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [
@@ -5533,19 +5607,8 @@
     }
    ],
    "source": [
-    "import itertools\n",
     "\n",
-    "def IoU(set1: set, set2: set) -> float:\n",
-    "    return len(set1.intersection(set2)) / len(set1.union(set2))\n",
-    "\n",
-    "# create dataframe of all combinations of users\n",
-    "user_combos = pd.DataFrame(list(itertools.combinations(tag_usercountry.index, 2)), columns=[\"user1\", \"user2\"])\n",
-    "\n",
-    "for i, row in user_combos.iterrows():\n",
-    "    user1 = row[\"user1\"]\n",
-    "    user2 = row[\"user2\"]\n",
-    "    user_combos.loc[i, \"IoU\"] = IoU(tag_usercountry.loc[user1, \"TagList\"], tag_usercountry.loc[user2, \"TagList\"])\n",
-    "    #user_combos.loc[i, \"country_match\"] = tag_usercountry.loc[user1, \"country\"] == tag_usercountry.loc[user2, \"country\"]"
+    "\n"
    ]
   },
   {
@@ -5577,7 +5640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -5601,7 +5664,7 @@
     "ax.set_title(\"Similarity of tags between users\")\n",
     "ax.set_xlabel(\"From same country?\")\n",
     "ax.set_ylabel(\"Tag Similarity\")\n",
-    "plt.show()"
+    "plt.savefig(\"tag_similarity.png\", dpi=300)"
    ]
   },
   {
@@ -5693,6 +5756,15 @@
    ],
    "source": [
     "userdf.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_df.to_csv(DATA_DIR / \"politics\" / \"tag_similarity.csv\")"
    ]
   },
   {
